--- a/commnon.css
+++ b/commnon.css
@@ -54,8 +54,33 @@ img{
     display: flex;
 }
 
-.site-menu li{
+.site-menu ul li{
     margin-left: 20px;
     margin-right: 20px;
 }
 
+.site-menu ul li a{
+    font-family: 'Cherry Bomb One', cursive;
+}
+
+.footer {
+    color: #ffffff;
+    background-color: #24211b;
+    padding-top: 30px;
+    padding-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer-logo{
+    display: block;
+    width: 235px;
+    margin-top: 90px;
+}
+
+.copyright {
+    font-size: 14pt;
+    margin-bottom: 30px;
+    margin-top: 90px;
+}
