--- a/css/common.css
+++ b/css/common.css
@@ -63,10 +63,14 @@ img {
     font-family: 'Cherry Bomb One', cursive;
 }
 
-@media (max-width: 800px){
+@media (max-width: 800px) {
     .site-menu ul {
         display: block;
         text-align: center;
+    }
+
+    .site-menu li {
+        margin-top: 20px;
     }
 
     .header {
@@ -77,7 +81,7 @@ img {
         background-color: #ffffff;
         height: 50px;
         z-index: 10;
-        box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
     }
 
     .header-inner {
@@ -88,18 +92,6 @@ img {
 
     .header-logo {
         width: 100px;
-    }
-
-    .main {
-        padding-top: 50px;
-    }
-
-    .footer-logo {
-        margin-top: 60px;
-    }
-
-    .site-menu li{
-        margin-top: 20px;
     }
 }
 
@@ -120,7 +112,7 @@ img {
 }
 
 .copyright {
-    font-size: 14px;
+    font-size: 14pt;
     font-weight: bold;
     margin-top: 90px;
 }
