--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,43 @@
 @charset "utf-8";
 
+.first-view {
+    height: calc(100vh - 110px);
+    background-image: url(../images/index/bg_main.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+}
+
+.first-view-text {
+    width: 100%;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 40px;
+    padding-right: 80px;
+    color: #ffffff;
+    font-weight: bold;
+    text-shadow: 1px 1px 10px #4b2c14;
+}
+
+.first-view-text h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 56px;
+    line-height: 72px;
+}
+
+.first-view-text p {
+    font-size: 18px;
+    margin-top: 20px;
+}
+
+.lead {
+    max-width: 1200px;
+    margin: 60px auto;
+}
+
 *,
 ::before,
 ::after {
@@ -63,10 +101,14 @@ img {
     font-family: 'Cherry Bomb One', cursive;
 }
 
-@media (max-width: 800px){
+@media (max-width: 800px) {
     .site-menu ul {
         display: block;
         text-align: center;
+    }
+
+    .site-menu li {
+        margin-top: 20px;
     }
 
     .header {
@@ -77,7 +119,7 @@ img {
         background-color: #ffffff;
         height: 50px;
         z-index: 10;
-        box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
     }
 
     .header-inner {
@@ -98,8 +140,8 @@ img {
         margin-top: 60px;
     }
 
-    .site-menu li{
-        margin-top: 20px;
+    .copyright {
+        margin-top: 50px;
     }
 }
 
@@ -120,7 +162,7 @@ img {
 }
 
 .copyright {
-    font-size: 14px;
+    font-size: 14pt;
     font-weight: bold;
     margin-top: 90px;
 }
